--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0028.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0028.html
@@ -1178,8 +1178,7 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 926 994 1005 1039">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ISO,</ins>
-            <del title="nlp 0.90">ISO,</del>
+            <ins title="nlp 2.00">186,</ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 1019 995 1058 1028">
@@ -1219,7 +1218,7 @@
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1961 1005 2052 1026" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">oὕτω</ins>
+            <ins title="nlp 2.00">ὕτω</ins>
           </span>
         </span>
         <span id="w_231" class="ocr_word" title="bbox 2079 1004 2136 1025" lang="grc">
@@ -1339,7 +1338,7 @@
       <span class="ocr_line" title="bbox 308 1110 952 1156">
         <span id="w_252" class="ocr_word" title="bbox 308 1113 393 1151" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">(τῶν</ins>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 423 1123 531 1144" lang="grc">
@@ -1751,7 +1750,7 @@
         </span>
         <span id="w_330" class="ocr_word" title="bbox 749 1411 788 1445" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">15 τὰ μόρια (pr. l.) ||</ins>
+            <ins title="nlp 2.00">τὰ μόρια (pr. l.) ||</ins>
           </span>
         </span>
         <span id="w_331" class="ocr_word" title="bbox 1165 1412 1217 1446">
@@ -1761,7 +1760,7 @@
         </span>
         <span id="w_332" class="ocr_word" title="bbox 1240 1413 1280 1446" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">16 ἐὰν—δυν.]</ins>
+            <ins title="nlp 2.00">ἐὰν—δυν.]</ins>
           </span>
         </span>
         <span id="w_333" class="ocr_word" title="bbox 1515 1425 1542 1447" lang="grc">
@@ -2033,8 +2032,7 @@
         </span>
         <span id="w_383" class="ocr_word" title="bbox 1536 1593 1551 1639">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ij</ins>
-            <del title="nlp 0.90">ij</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 1581 1594 1638 1628">
@@ -2245,8 +2243,7 @@
         </span>
         <span id="w_423" class="ocr_word" title="bbox 1739 1726 1788 1747">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tw</ins>
-            <del title="nlp 0.90">tw</del>
+            <ins title="nlp 2.00">τῶ</ins>
           </span>
         </span>
         <span id="w_424" class="ocr_word" title="bbox 1808 1713 1901 1758" lang="grc">
@@ -2372,16 +2369,11 @@
         </span>
         <span id="w_446" class="ocr_word" title="bbox 1965 1848 2135 1870" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεντεκαι-</ins>
+            <ins title="nlp 2.00">πεντεκαιδεκάτου</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 310 1888 1021 1936">
-        <span id="w_447" class="ocr_word" title="bbox 310 1890 451 1922" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεκάτου</ins>
-          </span>
-        </span>
         <span id="w_448" class="ocr_word" title="bbox 492 1888 495 1933">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">I</ins>
@@ -2614,8 +2606,7 @@
         </span>
         <span id="w_490" class="ocr_word" title="bbox 449 2132 516 2167">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">SOr</ins>
-            <del title="nlp 0.90">SOr</del>
+            <ins title="nlp 2.00">30r</ins>
           </span>
         </span>
         <span id="w_491" class="ocr_word" title="bbox 545 2144 632 2168">
@@ -3488,13 +3479,7 @@
         </span>
         <span id="w_653" class="ocr_word" title="bbox 965 2682 997 2714">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span id="w_654" class="ocr_word" title="bbox 1016 2673 1115 2706">
-          <span class="alternatives">
-            <ins title="nlp 2.00">4α10</ins>
+            <ins title="nlp 2.00">p. 4a10</ins>
           </span>
         </span>
         <span id="w_655" class="ocr_word" title="bbox 1141 2685 1177 2707" lang="grc">
