--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0209.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0209.html
@@ -206,16 +206,11 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 1731 746 1820 785" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμ-</ins>
+            <ins title="nlp 2.00">συμβεβηκότα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 142 800 1817 856">
-        <span id="w_37" class="ocr_word" title="bbox 142 801 332 856" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βεβηκότα</ins>
-          </span>
-        </span>
         <span id="w_38" class="ocr_word" title="bbox 354 803 538 845" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πολλάκις</ins>
@@ -788,7 +783,7 @@
         </span>
         <span id="w_147" class="ocr_word" title="bbox 860 1616 966 1672">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003E;</ins>
+            <ins title="nlp 2.00">#x003E;</ins>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 983 1633 1191 1672" lang="grc">
@@ -1056,7 +1051,7 @@
         </span>
         <span id="w_200" class="ocr_word" title="bbox 929 1892 1010 1948" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> &amp;#x003C;τὰ&amp;#x003E;</ins>
+            <ins title="nlp 2.00">#x003E;</ins>
           </span>
         </span>
         <span id="w_201" class="ocr_word" title="bbox 1027 1893 1066 1933" lang="grc">
@@ -1775,7 +1770,7 @@
         </span>
         <span id="w_335" class="ocr_word" title="bbox 244 2980 306 3024" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γρ.</ins>
+            <ins title="nlp 2.00">γρ.</ins>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 334 2980 375 3012" lang="grc">
@@ -1967,8 +1962,7 @@
         </span>
         <span id="w_371" class="ocr_word" title="bbox 1239 3097 1270 3129">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">H</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1462 3094 1504 3128">
@@ -1983,8 +1977,7 @@
         </span>
         <span id="w_374" class="ocr_word" title="bbox 1701 3094 1761 3126">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IIP</ins>
-            <del title="nlp 0.90">IIP</del>
+            <ins title="nlp 2.00">HP</ins>
           </span>
         </span>
       </span>
