--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0117.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0117.html
@@ -130,16 +130,11 @@
         </span>
         <span id="w_22" class="ocr_word" title="bbox 1767 259 1828 296" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔλ-</ins>
+            <ins title="nlp 2.00">ἔλθωμεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 152 327 1824 389">
-        <span id="w_23" class="ocr_word" title="bbox 152 335 284 389" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θωμεν</ins>
-          </span>
-        </span>
         <span id="w_24" class="ocr_word" title="bbox 316 335 378 374" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -438,9 +433,14 @@
             <ins title="nlp 2.00">συμβεβηκότος</ins>
           </span>
         </span>
-        <span id="w_82" class="ocr_word" title="bbox 1187 606 1431 659" lang="grc">
+        <span id="w_82_0" class="ocr_word" title="bbox 1187 606 1431 659">
           <span class="alternatives">
-            <ins title="nlp 2.00">(προηγεῖται</ins>
+            <ins class="alt" title="nlp 2.00">(προηγεῖται</ins>
+          </span>
+        </span>
+        <span id="w_82_1" class="ocr_word" title="bbox 1187 606 1431 659">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 1452 619 1524 657" lang="grc">
@@ -461,11 +461,6 @@
         <span id="w_86" class="ocr_word" title="bbox 1694 617 1728 641" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τί</ins>
-          </span>
-        </span>
-        <span id="w_87" class="ocr_word" title="bbox 1750 601 1829 641" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστι</ins>
           </span>
         </span>
       </span>
@@ -1102,19 +1097,19 @@
             <ins class="alt" title="nlp 1.00">τῇ</ins>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 1342 1442 1529 1483" lang="grc">
+        <span id="w_212_0" class="ocr_word" title="bbox 1342 1442 1529 1483">
           <span class="alternatives">
-            <ins title="nlp 2.00">ιδιαίτατα</ins>
+            <ins class="alt" title="nlp 2.00">ἰδιαίτατα</ins>
+          </span>
+        </span>
+        <span id="w_212_1" class="ocr_word" title="bbox 1342 1442 1529 1483">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 1560 1455 1726 1494" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαφορᾷ</ins>
-          </span>
-        </span>
-        <span id="w_214" class="ocr_word" title="bbox 1758 1441 1834 1480" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διαφέρουσιν,</ins>
           </span>
         </span>
       </span>
@@ -1310,7 +1305,7 @@
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1835 1644 1893 1681">
           <span class="alternatives">
-            <ins title="nlp 2.00">81ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1848,16 +1843,11 @@
         </span>
         <span id="w_359" class="ocr_word" title="bbox 1741 2268 1835 2322" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φθο-</ins>
+            <ins title="nlp 2.00">φθορᾶς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 157 2338 1833 2398">
-        <span id="w_360" class="ocr_word" title="bbox 157 2359 224 2398" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρᾶς</ins>
-          </span>
-        </span>
         <span id="w_361" class="ocr_word" title="bbox 268 2347 335 2385" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
