--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0161.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0161.html
@@ -627,7 +627,7 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1793 957 1836 1011" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">(ἡ</ins>
           </span>
         </span>
       </span>
@@ -1843,14 +1843,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_356" class="ocr_word" title="bbox 1607 2267 1683 2323">
+        <span id="w_356_0" class="ocr_word" title="bbox 1607 2267 1683 2323">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;δὲ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;δὲ&gt;</ins>
           </span>
         </span>
-        <span id="w_357" class="ocr_word" title="bbox 1708 2270 1829 2309" lang="grc">
+        <span id="w_356_1" class="ocr_word" title="bbox 1607 2267 1683 2323">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θυμὸν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
