--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0163.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0163.html
@@ -36,7 +36,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1818 160 1894 199">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">\2o</ins>
+            <ins title="nlp 2.00">123</ins>
           </span>
         </span>
       </span>
@@ -2397,7 +2397,7 @@
         </span>
         <span id="w_454" class="ocr_word" title="bbox 1178 2942 1222 2983" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">( ΙΙ</ins>
+            <ins title="nlp 2.00">ΙΙ</ins>
           </span>
         </span>
         <span id="w_455" class="ocr_word" title="bbox 1242 2952 1276 2985">
