--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0210.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0210.html
@@ -75,7 +75,7 @@
       <span class="ocr_line" title="bbox 439 241 2119 298">
         <span id="w_11" class="ocr_word" title="bbox 439 243 550 294" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;πρὸς τὴν καθόλου&amp;#x003E;</ins>
+            <ins title="nlp 2.00">&amp;#003C;πρὸς τὴν καθόλου&amp;#003E;</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 926 241 1141 296" lang="grc">
@@ -181,9 +181,9 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 2099 322 2187 358">
+        <span id="w_34_0" class="ocr_word" title="bbox 2099 322 2187 358">
           <span class="alternatives">
-            <ins title="nlp 2.00">249ν</ins>
+            <ins class="alt" title="nlp 2.00">249v</ins>
           </span>
         </span>
       </span>
@@ -255,9 +255,14 @@
             <ins class="alt" title="nlp 1.00">μίαν</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 548 448 646 505">
+        <span id="w_48_0" class="ocr_word" title="bbox 548 448 646 505">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;καὶ&amp;#003E;</ins>
+          </span>
+        </span>
+        <span id="w_48_1" class="ocr_word" title="bbox 548 448 646 505">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 672 465 740 504" lang="grc">
@@ -303,11 +308,6 @@
         <span id="w_57" class="ocr_word" title="bbox 1975 449 1994 490" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_58" class="ocr_word" title="bbox 2018 465 2120 490" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κύων</ins>
           </span>
         </span>
       </span>
@@ -699,9 +699,14 @@
             <ins class="alt" title="nlp 1.00">οὐσίαι</ins>
           </span>
         </span>
-        <span id="w_134" class="ocr_word" title="bbox 1075 932 1148 989">
+        <span id="w_134_0" class="ocr_word" title="bbox 1075 932 1148 989">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;αἱ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;αἱ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_134_1" class="ocr_word" title="bbox 1075 932 1148 989">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1170 948 1308 973" lang="grc">
@@ -727,11 +732,6 @@
         <span id="w_139" class="ocr_word" title="bbox 1774 949 1830 973" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
-          </span>
-        </span>
-        <span id="w_140" class="ocr_word" title="bbox 1853 933 2124 988" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπερθετικαῖς</ins>
           </span>
         </span>
       </span>
@@ -2508,10 +2508,14 @@
             <ins title="nlp 2.00">P6</ins>
           </span>
         </span>
-        <span id="w_481" class="ocr_word" title="bbox 1555 2910 1669 2954">
+        <span id="w_481_0" class="ocr_word" title="bbox 1555 2910 1669 2954">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἀφεστ.</ins>
-            <del title="nlp 0.90">suppl.</del>
+          </span>
+        </span>
+        <span id="w_481_1" class="ocr_word" title="bbox 1555 2910 1669 2954">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
       </span>
@@ -2689,8 +2693,7 @@
         </span>
         <span id="w_516" class="ocr_word" title="bbox 2135 3022 2190 3057">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xotl</ins>
-            <del title="nlp 0.90">xotl</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
