--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0118.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0118.html
@@ -158,9 +158,14 @@
             <ins title="nlp 2.00">ἰδιαίτατα</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 1332 308 1399 362" lang="grc">
+        <span id="w_28_0" class="ocr_word" title="bbox 1332 308 1399 362">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τὰ</ins>
+            <ins class="alt" title="nlp 2.00">(τὰ</ins>
+          </span>
+        </span>
+        <span id="w_28_1" class="ocr_word" title="bbox 1332 308 1399 362">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1437 324 1506 361" lang="grc">
@@ -181,11 +186,6 @@
         <span id="w_32" class="ocr_word" title="bbox 1767 307 1998 361" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαφέροντα</ins>
-          </span>
-        </span>
-        <span id="w_33" class="ocr_word" title="bbox 2029 309 2127 348" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄλλα</ins>
           </span>
         </span>
       </span>
@@ -220,9 +220,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_40" class="ocr_word" title="bbox 1181 380 1426 422" lang="grc">
+        <span id="w_40_0" class="ocr_word" title="bbox 1181 380 1426 422">
           <span class="alternatives">
-            <ins title="nlp 2.00">αλλοιοποιὸς</ins>
+            <ins class="alt" title="nlp 2.00">ἀλλοιοποιὸς</ins>
+          </span>
+        </span>
+        <span id="w_40_1" class="ocr_word" title="bbox 1181 380 1426 422">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1456 393 1481 431" lang="grc">
@@ -248,11 +253,6 @@
         <span id="w_45" class="ocr_word" title="bbox 1930 392 2031 417" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ποιεῖ</ins>
-          </span>
-        </span>
-        <span id="w_46" class="ocr_word" title="bbox 2061 393 2129 430" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -718,16 +718,11 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 2072 945 2127 969" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν-</ins>
+            <ins title="nlp 2.00">ἐνδέχεται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 449 997 2127 1060">
-        <span id="w_137" class="ocr_word" title="bbox 449 1020 605 1060" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δέχεται</ins>
-          </span>
-        </span>
         <span id="w_138" class="ocr_word" title="bbox 635 1005 698 1045" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1554,9 +1549,9 @@
             <ins class="alt" title="nlp 1.00">συντίκτεται</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 2123 1898 2185 1934">
+        <span id="w_299_0" class="ocr_word" title="bbox 2123 1898 2185 1934">
           <span class="alternatives">
-            <ins title="nlp 2.00">82ν</ins>
+            <ins class="alt" title="nlp 2.00">82v</ins>
           </span>
         </span>
       </span>
