--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0211.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0211.html
@@ -237,9 +237,9 @@
             <ins class="alt" title="nlp 1.00">λάβῃ·</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1714 589 1798 645" lang="grc">
+        <span id="w_43_0" class="ocr_word" title="bbox 1714 589 1798 645">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἐὰν γὰρ ὑπάλληλά τις λάβῃ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;ἐάν</ins>
           </span>
         </span>
       </span>
