--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0165.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0165.html
@@ -993,9 +993,14 @@
             <ins class="alt" title="nlp 1.00">ταῦτα</ins>
           </span>
         </span>
-        <span id="w_189" class="ocr_word" title="bbox 436 1706 517 1764">
+        <span id="w_189_0" class="ocr_word" title="bbox 436 1706 517 1764">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τὰ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;τὰ&gt;</ins>
+          </span>
+        </span>
+        <span id="w_189_1" class="ocr_word" title="bbox 436 1706 517 1764">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_190" class="ocr_word" title="bbox 550 1709 777 1762" lang="grc">
@@ -1041,11 +1046,6 @@
         <span id="w_198" class="ocr_word" title="bbox 1597 1727 1698 1752" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὕτω</ins>
-          </span>
-        </span>
-        <span id="w_199" class="ocr_word" title="bbox 1729 1728 1817 1765" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γοῦν</ins>
           </span>
         </span>
       </span>
