--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0212.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0212.html
@@ -124,7 +124,7 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 2106 221 2192 258">
           <span class="alternatives">
-            <ins title="nlp 2.00">250ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1458,16 +1458,11 @@
         </span>
         <span id="w_279" class="ocr_word" title="bbox 1973 1756 2125 1780" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑποκει-</ins>
+            <ins title="nlp 2.00">ὑποκειμένοις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 444 1809 2124 1864">
-        <span id="w_280" class="ocr_word" title="bbox 444 1822 572 1860" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένοις</ins>
-          </span>
-        </span>
         <span id="w_281" class="ocr_word" title="bbox 601 1810 681 1852" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
@@ -1555,9 +1550,14 @@
             <ins class="alt" title="nlp 1.00">οὐσίαι</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 1323 1877 1473 1933">
+        <span id="w_298_0" class="ocr_word" title="bbox 1323 1877 1473 1933">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὦσιν&amp;#x003Ε;,</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὧσιν&amp;#x003E;,</ins>
+          </span>
+        </span>
+        <span id="w_298_1" class="ocr_word" title="bbox 1323 1877 1473 1933">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1513 1895 1638 1920" lang="grc">
@@ -1578,11 +1578,6 @@
         <span id="w_302" class="ocr_word" title="bbox 1943 1881 1961 1920" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_303" class="ocr_word" title="bbox 1994 1881 2123 1932" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγος·</ins>
           </span>
         </span>
       </span>
@@ -1746,7 +1741,7 @@
         </span>
         <span id="w_335" class="ocr_word" title="bbox 648 2246 744 2289" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Oὐκ</ins>
+            <ins title="nlp 2.00">ὐκ</ins>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 782 2247 900 2288" lang="grc">
@@ -1756,7 +1751,7 @@
         </span>
         <span id="w_337" class="ocr_word" title="bbox 939 2264 986 2288" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> οὐσίας·</ins>
+            <ins title="nlp 2.00">οὐσίας·</ins>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1403 2266 1609 2305" lang="grc">
