--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0119.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0119.html
@@ -451,17 +451,21 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 815 851 1137 908">
-        <span id="w_85" class="ocr_word" title="bbox 815 851 1007 907" lang="grc">
+        <span id="w_85_0" class="ocr_word" title="bbox 815 851 1007 907">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις κθ΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_85_1" class="ocr_word" title="bbox 815 851 1007 907">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κθ'&amp;003E;.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 145 979 1757 1037">
         <span id="w_86" class="ocr_word" title="bbox 145 1000 177 1034">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 196 989 252 1030">
@@ -773,8 +777,7 @@
         </span>
         <span id="w_147" class="ocr_word" title="bbox 143 1535 175 1568">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 195 1524 273 1565">
@@ -832,9 +835,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1811 1515 1876 1551">
+        <span id="w_159_0" class="ocr_word" title="bbox 1811 1515 1876 1551">
           <span class="alternatives">
-            <ins title="nlp 2.00">83ν</ins>
+            <ins class="alt" title="nlp 2.00">83v</ins>
           </span>
         </span>
       </span>
