--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0089.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0089.html
@@ -1567,7 +1567,7 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 632 2900 651 2932" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">7 ὁ (utrobique) om</ins>
+            <ins title="nlp 2.00">ὁ (utrobique) om</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1054 2901 1079 2935">
@@ -1578,7 +1578,7 @@
         </span>
         <span id="w_304" class="ocr_word" title="bbox 1248 2902 1267 2936" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">6 τὸ ζῶον om.</ins>
+            <ins title="nlp 2.00">τὸ ζῶον om.</ins>
           </span>
         </span>
         <span id="w_305" class="ocr_word" title="bbox 1564 2903 1592 2936">
