--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0214.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0214.html
@@ -305,7 +305,7 @@
         </span>
         <span id="w_56" class="ocr_word" title="bbox 2127 418 2208 456" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">251ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1603,7 +1603,7 @@
         </span>
         <span id="w_305" class="ocr_word" title="bbox 663 2229 898 2284" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> ‘Υπάρχει δὲ</ins>
+            <ins title="nlp 2.00">‘Υπάρχει δὲ</ins>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 931 2245 979 2269" lang="grc">
@@ -1900,7 +1900,7 @@
         </span>
         <span id="w_362_0" class="ocr_word" title="bbox 1879 2678 2034 2735">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">|εἴρηται</ins>
+            <ins class="alt" title="nlp 2.00">εἴρηται</ins>
           </span>
         </span>
         <span id="w_362_1" class="ocr_word" title="bbox 1879 2678 2034 2735">
