--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0090.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0090.html
@@ -220,7 +220,7 @@
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1824 528 1990 582" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τούτων</ins>
+            <ins title="nlp 2.00">(τούτων</ins>
           </span>
         </span>
         <span id="w_39" class="ocr_word" title="bbox 2021 544 2094 582" lang="grc">
@@ -311,12 +311,12 @@
       <span class="ocr_line" title="bbox 1108 860 2148 919">
         <span id="w_56_0" class="ocr_word" title="bbox 1108 862 1270 919">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;x003C;Πρᾶξις</ins>
+            <ins class="alt" title="nlp 2.00">Πρᾶξις</ins>
           </span>
         </span>
         <span id="w_56_1" class="ocr_word" title="bbox 1108 862 1270 919">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τη'&amp;x003E;.</ins>
+            <ins class="alt" title="nlp 2.00">x003E;.</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 2095 860 2148 897">
@@ -1637,7 +1637,7 @@
         </span>
         <span id="w_309" class="ocr_word" title="bbox 670 2596 828 2640" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ἒλαμψιν</ins>
+            <ins title="nlp 2.00">ἒλαμψιν</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 854 2595 913 2640">
@@ -1724,7 +1724,7 @@
         </span>
         <span id="w_326" class="ocr_word" title="bbox 864 2654 1067 2700" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[δαιφένεται</ins>
+            <ins title="nlp 2.00">δαιφένεται</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 1093 2656 1166 2698">
