--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0120.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0120.html
@@ -1470,7 +1470,7 @@
         </span>
         <span id="w_285" class="ocr_word" title="bbox 2133 1693 2198 1730">
           <span class="alternatives">
-            <ins title="nlp 2.00">84ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
