--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0215.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0215.html
@@ -1087,16 +1087,11 @@
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1684 1354 1796 1392" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατη-</ins>
+            <ins title="nlp 2.00">κατηγορεῖσθαι,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 120 1400 1794 1462">
-        <span id="w_206" class="ocr_word" title="bbox 120 1401 330 1454" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γορεῖσθαι,</ins>
-          </span>
-        </span>
         <span id="w_207" class="ocr_word" title="bbox 353 1400 450 1454" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἴγε</ins>
