--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0091.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0091.html
@@ -536,7 +536,7 @@
         </span>
         <span id="w_101" class="ocr_word" title="bbox 1487 701 1553 757" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἦν</ins>
+            <ins title="nlp 2.00">(ἦν</ins>
           </span>
         </span>
         <span id="w_102" class="ocr_word" title="bbox 1584 717 1655 755" lang="grc">
@@ -764,7 +764,7 @@
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1268 975 1327 1028" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
+            <ins title="nlp 2.00">(ἐν</ins>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 1364 991 1436 1030" lang="grc">
@@ -1923,9 +1923,14 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_375" class="ocr_word" title="bbox 666 2597 783 2637">
+        <span id="w_375_0" class="ocr_word" title="bbox 666 2597 783 2637">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;κατὰ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;κατὰ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_375_1" class="ocr_word" title="bbox 666 2597 783 2637">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_376" class="ocr_word" title="bbox 808 2597 851 2630">
@@ -1940,12 +1945,7 @@
         </span>
         <span id="w_378" class="ocr_word" title="bbox 1025 2597 1045 2631" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">5 αὐτοῦ V</ins>
-          </span>
-        </span>
-        <span id="w_379" class="ocr_word" title="bbox 1375 2600 1433 2631" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τοῦ ανθρ.] τὸ ανθρ. V</ins>
+            <ins title="nlp 2.00">αὐτοῦ V</ins>
           </span>
         </span>
       </span>
