--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0216.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0216.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 390 93 1815 141">
         <span id="w_0" class="ocr_word" title="bbox 390 100 466 141">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">170</ins>
+            <ins title="nlp 2.00">176</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 773 96 908 130">
@@ -174,9 +174,14 @@
             <ins class="alt" title="nlp 1.00">οὐσίας</ins>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 1574 277 1652 333">
+        <span id="w_31_0" class="ocr_word" title="bbox 1574 277 1652 333">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;τὸ&amp;#003E;</ins>
+          </span>
+        </span>
+        <span id="w_31_1" class="ocr_word" title="bbox 1574 277 1652 333">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1676 294 1784 318" lang="grc">
@@ -187,11 +192,6 @@
         <span id="w_33" class="ocr_word" title="bbox 1807 295 1847 318" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τι</ins>
-          </span>
-        </span>
-        <span id="w_34" class="ocr_word" title="bbox 1870 293 2088 333" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σημαίνειν.</ins>
           </span>
         </span>
       </span>
@@ -352,7 +352,7 @@
         </span>
         <span id="w_66" class="ocr_word" title="bbox 812 485 900 542">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 924 503 1108 530" lang="grc">
@@ -628,9 +628,9 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_119" class="ocr_word" title="bbox 2112 768 2197 804">
+        <span id="w_119_0" class="ocr_word" title="bbox 2112 768 2197 804">
           <span class="alternatives">
-            <ins title="nlp 2.00">252ν</ins>
+            <ins class="alt" title="nlp 2.00">252v</ins>
           </span>
         </span>
       </span>
