--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0217.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0217.html
@@ -218,7 +218,7 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 1002 378 1100 434">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1139 395 1177 421" lang="grc">
@@ -2510,7 +2510,7 @@
         </span>
         <span id="w_483" class="ocr_word" title="bbox 1334 2952 1416 2993" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οἷον τὸ&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_485" class="ocr_word" title="bbox 1520 2949 1534 2983">
