--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0218.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0218.html
@@ -496,7 +496,7 @@
         </span>
         <span id="w_96" class="ocr_word" title="bbox 2083 630 2171 667">
           <span class="alternatives">
-            <ins title="nlp 2.00">253ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
